# chief-of-staff

./: .gitignore  AGENTS.md  Architecture.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/agents/: calendar_agent_node.py  compiled_graph_cache.py  email_agent_node.py  graph.py  notion_agent_node.py  orchestrator_node.py  state.py
backend/auth/: __init__.py  constants.py  dependencies.py  jwt.py  oauth_redirect.py
backend/db/: __init__.py  background_job_schema_migration.py  base.py  constants.py  dependencies.py  session.py  task_schema_migration.py
backend/jobs/: __init__.py  background_job_tick.py  bio_summarization.py
backend/lib/: __init__.py  enums.py  mcp.py
backend/models/: __init__.py  background_job.py  background_job_run.py  conversation.py  task.py  user.py  user_calendar_integration.py  user_gmail_integration.py  user_integration.py  user_memory.py  user_notification.py  user_notion_integration.py  user_profile.py
backend/routers/: auth.py  background_jobs.py  calendar.py  chat.py  create_entities.py  gmail.py  health.py  notifications.py  notion.py  tasks.py  voice.py
backend/schemas/: background_jobs.py  calendar.py  chat.py  conversation.py  gmail.py  health.py  notion.py  task.py  user.py  voice.py
backend/services/: agent_runner.py  background_job_serialization.py  background_job_service.py  calendar_client.py  calendar_integration_service.py  conversation_service.py  embedding_service.py  gmail_client.py  gmail_integration_service.py  google_token_revocation.py  redis_client.py  (+10 more)
(+77 files in other folders)
